@@ -35,6 +35,7 @@ Enhancements::
 
 Improvements::
 
+* render horizontal dlist without using prawn-table, allowing the description to exceed the height of one page (#2591)
 * process `pre-wrap` role in text formatter
 * drop support for the unmaintained payment font (`pf`) for use in font-based icons
 * refactor formatted text transform to simplify how inner space is collapsed; verify only inner hard breaks are preserved
